deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-web
  namespace: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      role: web-frontend
  template:
    metadata:
      labels:
        role: web-frontend
    spec:
      containers:
      - name: web
        image: nginx
        ports:
        - name: web
          containerPort: 80
        volumeMounts:
        - name: nfs
          mountPath: "/usr/share/nginx/html"
      volumes:
      - name: nfs
        persistentVolumeClaim:
          claimName: nfs
