sv.yaml
kind: Service
apiVersion: v1
metadata:
  name: nfs-web
  namespace: nginx
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    role: web-frontend
