ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nfs-web
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: simpleapi.com.br  # Substitua pelo seu domínio
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nfs-web
            port:
              number: 80
